overlay: initial commit
instead of mujoco rendering put an overlay on the original video

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,10 @@ dependencies = [
     "mujoco-mjx",
     "opencv-python",
     "optax",
+    "trimesh",
+    "pyrender",
+    "numpy-stl",
+    "PyOpenGL",
 ]
 
 [tool.setuptools.package-data]
